Background fixed on mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -430,4 +430,11 @@ ul {
     background-size: 2500px;
     /* background-position-x: 55%; */
   }
+
+  .section-container img {
+    width: 50%;
+    border-radius: 20px;
+    margin-bottom: 40px;
+    margin-left: 10%;
+  }
 }
